--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -1,6 +1,6 @@
 .nav {
     background-color: beige;
-    min-height: 7vh;
+    height: 7vh;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -9,4 +9,6 @@
 
     color: black;
     position: absolute;
+    padding-left: 20px;
+    padding-right: 20px;
   }
