--- a/src/css/Map.css
+++ b/src/css/Map.css
@@ -1,10 +1,29 @@
 .map {
-    background-color: rgb(128, 194, 170);
     height: 800px;
     width: 800px;
+    position:relative;
+}
+
+.mapBackground {
+    z-index: -1;
+    position: relative;
+    left: 0px;
+    top: 0px;
+    object-fit: fill;
+}
+
+.teepee{
+    position: absolute;
+    height: 50px;
+    width: 50px;
 }
 
 .teepee1 {
-    height: 50px;
-    width: 50px;
+    left: 480px;
+    top: 400px;
+}
+
+.teepee2 {
+    left: 490px;
+    top: 350px;
 }
