--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -1,7 +1,7 @@
 .nav {
     background-color: beige;
     height: 7vh;
-    width: 100vw;
+    width: 97vw;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -11,4 +11,8 @@
     position: absolute;
     padding-left: 20px;
     padding-right: 20px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    margin-right: 45px;
   }
