--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -16,3 +16,10 @@
     margin-bottom: 5px;
     margin-right: 45px;
   }
+
+  .siteMenu {
+    display: flex;
+    flex-direction:column;
+    position: absolute;
+    margin-left: 52px;
+  }
