--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,6 +11,15 @@
           justify-content: space-between;
 }
 
+@media only screen and (max-width: 780px) {
+  main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .App {
   text-align: center;
   position: relative;
@@ -31,10 +40,16 @@
   margin-left: 20px;
 }
 
+@media only screen and (max-width: 780px) {
+  .pictures {
+    display: none;
+  }
+}
+
 .picture {
-  padding: 5px;
-  height: 200px;
-  width: 200px;
+  padding: "5px";
+  height: "200px";
+  width: "200px";
 }
 
 .noticeList {
@@ -50,9 +65,9 @@
 }
 
 .adminImage {
-  padding: 5px;
-  height: 40px;
-  width: 40px;
+  padding: "5px";
+  height: "200px";
+  width: "200px";
 }
 
 .map {
@@ -124,7 +139,7 @@
 }
 
 .nav {
-  background-color: beige;
+  background-color: "beige";
   height: 7vh;
   width: 94vw;
   display: -webkit-box;
